--- a/includes/index.hbs
+++ b/includes/index.hbs
@@ -47,11 +47,11 @@
 <section class="header-container">
     <div style="display:flex; justify-content:space-between; align-items:flex-end;">
         <div>
-            <!-- <a href="https://github.com/YueYin27/MyArxivDaily" style="text-decoration: none;">
+            {{!-- <a href="https://github.com/YueYin27/MyArxivDaily" style="text-decoration: none;">
                 <div class="header-title">
                     <span class="header-title-preffix">NotCraft</span>//MyArxivDaily
                 </div>
-            </a> -->
+            </a> --}}
             <div class="header-title">
                 My Arxiv Daily
             </div>
@@ -116,12 +116,12 @@
 <footer>
     <div>
         <time id="build-timestamp" datetime="{{build_time}}">
-            <!-- <a href="https://github.com/YueYin27/MyArxivDaily/actions">
+            {{!-- <a href="https://github.com/YueYin27/MyArxivDaily/actions">
                 <img id="build-timestamp-badge"
                      src="https://img.shields.io/github/actions/workflow/status/NotCraft/ArxivDaily/update-feed.yml?label={{time_format
                     build_time "%F %T %Z"}}&style=for-the-badge"
                 alt="{{time_format build_time "%F %T %Z"}}">
-            </a> -->
+            </a> --}}
         </time>
     </div>
 </footer>
