--- a/includes/index.hbs
+++ b/includes/index.hbs
@@ -47,11 +47,11 @@
 <section class="header-container">
     <div style="display:flex; justify-content:space-between; align-items:flex-end;">
         <div>
-            {{!-- <a href="https://github.com/YueYin27/MyArxivDaily" style="text-decoration: none;">
+<!--             <a href="https://github.com/YueYin27/MyArxivDaily" style="text-decoration: none;">
                 <div class="header-title">
-                    <span class="header-title-preffix">NotCraft</span>//MyArxivDaily
+                    <span class="header-title-preffix">MyArxiv</span>//MyArxiv
                 </div>
-            </a> --}}
+            </a> -->
             <div class="header-title">
                 My Arxiv Daily
             </div>
@@ -75,7 +75,7 @@
             <article>
                 <details>
                     <Summary>
-                        {{ subject }}
+                        {{ subject }} <span class="chip" style="font-size: 60%">{{len papers}}</span>
                     </Summary>
                     <div class="details-content">
                         {{#each papers}}
@@ -116,12 +116,13 @@
 <footer>
     <div>
         <time id="build-timestamp" datetime="{{build_time}}">
-            {{!-- <a href="https://github.com/YueYin27/MyArxivDaily/actions">
+<!--             <a href="https://github.com/YueYin27/MyArxivDaily/actions">
                 <img id="build-timestamp-badge"
-                     src="https://img.shields.io/github/actions/workflow/status/NotCraft/ArxivDaily/update-feed.yml?label={{time_format
+                     src="https://img.shields.io/github/workflow/status/YueYin27/MyArxivDaily/Update?label={{time_format
                     build_time "%F %T %Z"}}&style=for-the-badge"
                 alt="{{time_format build_time "%F %T %Z"}}">
-            </a> --}}
+            </a> -->
+            {{time_format build_time "%F %T %Z"}}
         </time>
     </div>
 </footer>
