--- a/includes/index.hbs
+++ b/includes/index.hbs
@@ -53,7 +53,7 @@
                 </div>
             </a> -->
             <div class="header-title">
-                My Arxiv Daily
+                My Daily ArxivFeed
             </div>
         </div>
 
@@ -125,6 +125,9 @@
             {{time_format build_time "%F %T %Z"}}
         </time>
     </div>
+</footer>
+<script src="index.js"></script>
+</html>
 </footer>
 <script src="index.js"></script>
 </html>
