--- a/includes/index.hbs
+++ b/includes/index.hbs
@@ -53,7 +53,7 @@
                 </div>
             </a> -->
             <div class="header-title">
-                My Daily Arxiv Feed!
+                My Daily Arxiv Feed :D
             </div>
         </div>
 
