--- a/includes/index.hbs
+++ b/includes/index.hbs
@@ -47,7 +47,7 @@
 <section class="header-container">
     <div style="display:flex; justify-content:space-between; align-items:flex-end;">
         <div>
-<!--             <a href="https://github.com/YueYin27/MyArxivDaily" style="text-decoration: none;">
+<!--             <a href="https://github.com/YueYin27/MyArxiv" style="text-decoration: none;">
                 <div class="header-title">
                     <span class="header-title-preffix">MyArxiv</span>//MyArxiv
                 </div>
@@ -118,7 +118,7 @@
         <time id="build-timestamp" datetime="{{build_time}}">
 <!--             <a href="https://github.com/YueYin27/MyArxivDaily/actions">
                 <img id="build-timestamp-badge"
-                     src="https://img.shields.io/github/workflow/status/YueYin27/MyArxivDaily/Update?label={{time_format
+                     src="https://img.shields.io/github/workflow/status/YueYin27/MyArxiv/Update?label={{time_format
                     build_time "%F %T %Z"}}&style=for-the-badge"
                 alt="{{time_format build_time "%F %T %Z"}}">
             </a> -->
